# lab_programmazione

./: CMakeLists.txt  README.md
src/: Note.cpp  Note.h  Notebook.cpp  Notebook.h  NotebookObserver.h  NotesManager.cpp  NotesManager.h  main.cpp
test/: test_note.cpp  test_notebook.cpp  test_notebook_observer.cpp  test_notes_manager.cpp
